syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.merkadoLivreGrpc.category";
option java_outer_classname = "MerkadoLivreGrpcCategory";

package com.merkadoLivreGrpc.category;

service CategoryService {
  rpc createCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
}

message CreateCategoryRequest {
  string name = 1;
  string parent = 2;
}

message CreateCategoryResponse {
  string message = 1;
}